# freemoji

./: .gitignore  LICENSE  README.md  app.py  download.py  downloadModel.py  emojiList.py  emojis.json  emojisPruned.json  generate.py  promptAssist.py  pyproject.toml  resize.py  utils.py
fine-tune/: README.md  downloadEmojis.py  emojiList.py  filterEmojis.py  pruneEmojis.py  utility.py
fine-tune/config/: config.json  multidatabackend.json
